Added error handling

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -2,4 +2,5 @@ distance=Distance (Km)
 fuel_used=Fuel used
 calculate_fuel_consumption=Calculate Fuel Consumption
 fuel_consumption=Fuel consumption:
+error=invalid input: please enter valid numbers.
 
