--- a/src/main/resources/messages_fa_IR.properties
+++ b/src/main/resources/messages_fa_IR.properties
@@ -2,3 +2,4 @@ distance=مسافت (کیلومتر)
 fuel_used=سوخت مصرف شده
 calculate_fuel_consumption=محاسبه مصرف سوخت
 fuel_consumption=مصرف سوخت:
+error=ورودی نامعتبر: لطفاً اعداد معتبر وارد کنید.
