--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -2,3 +2,4 @@ distance=La distance (Km)
 fuel_used=carburant utilisé
 calculate_fuel_consumption=Calculer la consommation de carburant
 fuel_consumption=Consommation de carburant:
+error=Entrée invalide : Veuillez saisir un numéro valide.
